--- a/overrides/partials/footer.html
+++ b/overrides/partials/footer.html
@@ -30,7 +30,7 @@
       <div class="md-footer-copyright">
         {% if config.copyright %}
           <div class="md-footer-copyright__highlight">
-            {{ config.copyright }}
+            {{ config.copyright }} <a href="https://sharecloud.ee">ShareCloud OÜ</a>
           </div>
         {% endif %}
         {{ extracopyright }}
