--- a/overrides/partials/tabs-item.html
+++ b/overrides/partials/tabs-item.html
@@ -1,13 +1,16 @@
 <!--
-  Copyright (c) 2016-2021 Martin Donath <martin.donath@squidfunk.com>
+  Copyright (c) 2016-2024 Martin Donath <martin.donath@squidfunk.com>
+
   Permission is hereby granted, free of charge, to any person obtaining a copy
   of this software and associated documentation files (the "Software"), to
   deal in the Software without restriction, including without limitation the
   rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
   sell copies of the Software, and to permit persons to whom the Software is
   furnished to do so, subject to the following conditions:
+
   The above copyright notice and this permission notice shall be included in
   all copies or substantial portions of the Software.
+
   THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
   IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
   FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
@@ -16,39 +19,56 @@
   FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
   IN THE SOFTWARE.
 -->
-{% if not nav_item.title.startswith("_") %}
-<!-- Determine class according to state -->
-{% if not class %}
-  {% set class = "md-tabs__link" %}
-  {% if nav_item.active %}
-    {% set class = class ~ " md-tabs__link--active" %}
-  {% endif %}
-{% endif %}
 
-<!-- Main navigation item with nested items -->
-{% if nav_item.children %}
-  {% set title = title | d(nav_item.title) %}
-  {% set nav_item = nav_item.children | first %}
+<!-- Render navigation link content -->
+{% macro render_content(nav_item, ref = nav_item) %}
 
-  <!-- Recurse, if the first item has further nested items -->
-  {% if nav_item.children %}
-    {% include "partials/tabs-item.html" %}
-
-  <!-- Render item -->
-  {% else %}
-    <li class="md-tabs__item">
-      <a href="{{ nav_item.url | url }}" class="{{ class }}">
-        {{ title }}
-      </a>
-    </li>
+  <!-- Navigation link icon -->
+  {% if nav_item == ref or "navigation.indexes" in features %}
+    {% if nav_item.is_index and nav_item.meta.icon %}
+      {% include ".icons/" ~ nav_item.meta.icon ~ ".svg" %}
+    {% endif %}
   {% endif %}
 
-<!-- Main navigation item -->
-{% else %}
-  <li class="md-tabs__item">
-    <a href="{{ nav_item.url | url }}" class="{{ class }}">
-      {{ nav_item.title }}
-    </a>
-  </li>
-{% endif %}
-{% endif %}
+  <!-- Navigation link title -->
+  {{ ref.title }}
+{% endmacro %}
+
+<!-- Render navigation item -->
+{% macro render(nav_item, ref = nav_item) %}
+
+  <!-- Don't render navigation items starting with an underscore -->
+  {% if not nav_item.title.startswith("_") %}
+    <!-- Determine classes -->
+    {% set class = "md-tabs__item" %}
+    {% if ref.active %}
+      {% set class = class ~ " md-tabs__item--active" %}
+    {% endif %}
+
+    <!-- Navigation item with nested items -->
+    {% if nav_item.children %}
+      {% set first = nav_item.children | first %}
+
+      <!-- Recurse, if the first item has further nested items -->
+      {% if first.children %}
+        {{ render(first, ref) }}
+
+      <!-- Nested navigation item -->
+      {% else %}
+        <li class="{{ class }}">
+          <a href="{{ first.url | url }}" class="md-tabs__link">
+            {{ render_content(first, ref) }}
+          </a>
+        </li>
+      {% endif %}
+
+    <!-- Navigation item -->
+    {% else %}
+      <li class="{{ class }}">
+        <a href="{{ nav_item.url | url }}" class="md-tabs__link">
+          {{ render_content(nav_item) }}
+        </a>
+      </li>
+    {% endif %}
+  {% endif %}
+{% endmacro %}
